iptables-save2020-19-12--18-06-27
# Generated by iptables-save v1.4.21 on Fri Jun 12 18:19:27 2020
*nat
:PREROUTING ACCEPT [5:256]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [39:2566]
:POSTROUTING ACCEPT [39:2566]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-3UUJWWVUPAZT7RJW - [0:0]
:KUBE-SEP-6J7MFDQH555BFTLO - [0:0]
:KUBE-SEP-FKH3EAZITYZGV6IE - [0:0]
:KUBE-SEP-FXH5QIK5635T3TPT - [0:0]
:KUBE-SEP-HBJCO3CY76QCPHPH - [0:0]
:KUBE-SEP-IGG25AIGREG5ZZRM - [0:0]
:KUBE-SEP-M2YWUPL52LEBDPPK - [0:0]
:KUBE-SEP-OA5S3NERY5NXLRBI - [0:0]
:KUBE-SEP-OHHM63CDHT6R3WIC - [0:0]
:KUBE-SEP-R4Q7BPOHSAJOFJOD - [0:0]
:KUBE-SEP-SCCRAJ23AUXB4PAR - [0:0]
:KUBE-SEP-TIVYGL4V2HMLMT3U - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-3CNVY67K4TR75NQR - [0:0]
:KUBE-SVC-7SIP7CUMX5MNVC4E - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-G563VAW2TIHRPF54 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-K7J76NXP7AUZVFGS - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-ZUD4L6KQKCHD52W4 - [0:0]
:WEAVE - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j WEAVE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-3UUJWWVUPAZT7RJW -s 10.44.0.56/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-3UUJWWVUPAZT7RJW -p udp -m udp -j DNAT --to-destination 10.44.0.56:53
-A KUBE-SEP-6J7MFDQH555BFTLO -s 10.32.0.11/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-6J7MFDQH555BFTLO -p tcp -m tcp -j DNAT --to-destination 10.32.0.11:9153
-A KUBE-SEP-FKH3EAZITYZGV6IE -s 10.44.0.56/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-FKH3EAZITYZGV6IE -p tcp -m tcp -j DNAT --to-destination 10.44.0.56:9153
-A KUBE-SEP-FXH5QIK5635T3TPT -s 10.44.0.60/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-FXH5QIK5635T3TPT -p tcp -m tcp -j DNAT --to-destination 10.44.0.60:8080
-A KUBE-SEP-HBJCO3CY76QCPHPH -s 10.44.0.63/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-HBJCO3CY76QCPHPH -p tcp -m tcp -j DNAT --to-destination 10.44.0.63:10250
-A KUBE-SEP-IGG25AIGREG5ZZRM -s 10.44.0.61/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-IGG25AIGREG5ZZRM -p tcp -m tcp -j DNAT --to-destination 10.44.0.61:44134
-A KUBE-SEP-M2YWUPL52LEBDPPK -s 116.203.100.241/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-M2YWUPL52LEBDPPK -p tcp -m tcp -j DNAT --to-destination 116.203.100.241:6443
-A KUBE-SEP-OA5S3NERY5NXLRBI -s 10.44.0.64/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-OA5S3NERY5NXLRBI -p tcp -m tcp -j DNAT --to-destination 10.44.0.64:9402
-A KUBE-SEP-OHHM63CDHT6R3WIC -s 10.32.0.11/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-OHHM63CDHT6R3WIC -p udp -m udp -j DNAT --to-destination 10.32.0.11:53
-A KUBE-SEP-R4Q7BPOHSAJOFJOD -s 10.44.0.56/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-R4Q7BPOHSAJOFJOD -p tcp -m tcp -j DNAT --to-destination 10.44.0.56:53
-A KUBE-SEP-SCCRAJ23AUXB4PAR -s 10.44.0.60/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-SCCRAJ23AUXB4PAR -p tcp -m tcp -j DNAT --to-destination 10.44.0.60:50000
-A KUBE-SEP-TIVYGL4V2HMLMT3U -s 10.32.0.11/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-TIVYGL4V2HMLMT3U -p tcp -m tcp -j DNAT --to-destination 10.32.0.11:53
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.106.200.5/32 -p tcp -m comment --comment "cert-manager/cert-manager-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.106.200.5/32 -p tcp -m comment --comment "cert-manager/cert-manager-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-ZUD4L6KQKCHD52W4
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.98.30.33/32 -p tcp -m comment --comment "jenkins2/jenkins2:http cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.98.30.33/32 -p tcp -m comment --comment "jenkins2/jenkins2:http cluster IP" -m tcp --dport 8080 -j KUBE-SVC-3CNVY67K4TR75NQR
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.99.33.28/32 -p tcp -m comment --comment "cert-manager/cert-manager: cluster IP" -m tcp --dport 9402 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.99.33.28/32 -p tcp -m comment --comment "cert-manager/cert-manager: cluster IP" -m tcp --dport 9402 -j KUBE-SVC-G563VAW2TIHRPF54
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.98.116.239/32 -p tcp -m comment --comment "jenkins2/jenkins2-agent:slavelistener cluster IP" -m tcp --dport 50000 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.98.116.239/32 -p tcp -m comment --comment "jenkins2/jenkins2-agent:slavelistener cluster IP" -m tcp --dport 50000 -j KUBE-SVC-7SIP7CUMX5MNVC4E
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.103.58.51/32 -p tcp -m comment --comment "kube-system/tiller-deploy:tiller cluster IP" -m tcp --dport 44134 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.103.58.51/32 -p tcp -m comment --comment "kube-system/tiller-deploy:tiller cluster IP" -m tcp --dport 44134 -j KUBE-SVC-K7J76NXP7AUZVFGS
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-3CNVY67K4TR75NQR -j KUBE-SEP-FXH5QIK5635T3TPT
-A KUBE-SVC-7SIP7CUMX5MNVC4E -j KUBE-SEP-SCCRAJ23AUXB4PAR
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-TIVYGL4V2HMLMT3U
-A KUBE-SVC-ERIFXISQEP7F7OF4 -j KUBE-SEP-R4Q7BPOHSAJOFJOD
-A KUBE-SVC-G563VAW2TIHRPF54 -j KUBE-SEP-OA5S3NERY5NXLRBI
-A KUBE-SVC-JD5MR3NA4I4DYORP -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-6J7MFDQH555BFTLO
-A KUBE-SVC-JD5MR3NA4I4DYORP -j KUBE-SEP-FKH3EAZITYZGV6IE
-A KUBE-SVC-K7J76NXP7AUZVFGS -j KUBE-SEP-IGG25AIGREG5ZZRM
-A KUBE-SVC-NPX46M4PTMTKRN6Y -j KUBE-SEP-M2YWUPL52LEBDPPK
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-OHHM63CDHT6R3WIC
-A KUBE-SVC-TCOU7JCQXEZGVUNU -j KUBE-SEP-3UUJWWVUPAZT7RJW
-A KUBE-SVC-ZUD4L6KQKCHD52W4 -j KUBE-SEP-HBJCO3CY76QCPHPH
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Fri Jun 12 18:19:27 2020
# Generated by iptables-save v1.4.21 on Fri Jun 12 18:19:27 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4026:1208338]
:BLA - [0:0]
:BLUB - [0:0]
:CUSTOM-ACCEPT - [0:0]
:CUSTOM-DROP - [0:0]
:CUSTOM-TAIL - [0:0]
:CUSTOM-TAIL-DROP - [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:WEAVE-NPC - [0:0]
:WEAVE-NPC-DEFAULT - [0:0]
:WEAVE-NPC-EGRESS - [0:0]
:WEAVE-NPC-EGRESS-ACCEPT - [0:0]
:WEAVE-NPC-EGRESS-CUSTOM - [0:0]
:WEAVE-NPC-EGRESS-DEFAULT - [0:0]
:WEAVE-NPC-INGRESS - [0:0]
-A INPUT -j CUSTOM-ACCEPT
-A INPUT -j CUSTOM-DROP
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A INPUT -p tcp -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j LOG --log-prefix "iptables:REJECT all: "
-A INPUT -i weave -j WEAVE-NPC-EGRESS
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j CUSTOM-ACCEPT
-A FORWARD -j CUSTOM-DROP
-A FORWARD -i weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC-EGRESS
-A FORWARD -o weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC
-A FORWARD -o weave -m state --state NEW -j NFLOG --nflog-group 86
-A FORWARD -o weave -j DROP
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A BLA -j DROP
-A BLUB -j DROP
-A CUSTOM-ACCEPT -s 91.5.21.178/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 189.6.24.3/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 172.17.0.0/16 -j ACCEPT
-A CUSTOM-ACCEPT -s 127.0.0.0/8 -j ACCEPT
-A CUSTOM-ACCEPT -s 116.203.100.241/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 10.32.0.1/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 78.47.247.254/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 116.203.74.214/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 116.203.107.195/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 172.17.0.1/32 -j ACCEPT
-A CUSTOM-ACCEPT -s 192.168.0.0/16 -j ACCEPT
-A CUSTOM-ACCEPT -s 10.0.0.0/8 -j ACCEPT
-A CUSTOM-ACCEPT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A CUSTOM-ACCEPT -j RETURN
-A CUSTOM-DROP -p tcp -m tcp --dport 5901 -j DROP
-A CUSTOM-DROP -p tcp -m tcp --dport 443 -j DROP
-A CUSTOM-DROP -p tcp -m tcp --dport 5902 -j DROP
-A CUSTOM-DROP -p tcp -m tcp --dport 6902 -j DROP
-A CUSTOM-DROP -p tcp -m tcp --dport 6901 -j DROP
-A CUSTOM-DROP -p tcp -m tcp --dport 80 -j DROP
-A CUSTOM-DROP -j RETURN
-A CUSTOM-TAIL -j DROP
-A CUSTOM-TAIL-DROP -j DROP
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "feature-0012-deploy-and--5da24c/cm-acme-http-solver-blpvh:http has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 30328 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "jenkins/cm-acme-http-solver-9zxj2:http has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 30908 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "default/cm-acme-http-solver-xzrs9:http has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 30912 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "jenkins2/cm-acme-http-solver-hrs2p:http has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 30391 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.98.179.28/32 -p tcp -m comment --comment "feature-0012-deploy-and--5da24c/cm-acme-http-solver-blpvh:http has no endpoints" -m tcp --dport 8089 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.99.154.22/32 -p tcp -m comment --comment "jenkins/jenkins:http has no endpoints" -m tcp --dport 8080 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.108.106.137/32 -p tcp -m comment --comment "jenkins/jenkins-agent:slavelistener has no endpoints" -m tcp --dport 50000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.100.25.212/32 -p tcp -m comment --comment "jenkins/cm-acme-http-solver-9zxj2:http has no endpoints" -m tcp --dport 8089 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.96.137.68/32 -p tcp -m comment --comment "default/cm-acme-http-solver-xzrs9:http has no endpoints" -m tcp --dport 8089 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.111.193.98/32 -p tcp -m comment --comment "jenkins2/cm-acme-http-solver-hrs2p:http has no endpoints" -m tcp --dport 8089 -j REJECT --reject-with icmp-port-unreachable
-A WEAVE-NPC -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC -d 224.0.0.0/4 -j ACCEPT
-A WEAVE-NPC -m physdev --physdev-out vethwe-bridge --physdev-is-bridged -j ACCEPT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-DEFAULT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-INGRESS
-A WEAVE-NPC-DEFAULT -m set --match-set weave-r1PherNBvKjxB4?1Qzt[sSc=g dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0011-extend-selenium-t-d7ae07" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-;)p}q{ShK:dc9f_Chom8IA!:q dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0014-replace-sta-b27ba7" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-Y@eL6Bh^flaKvi7XdieA:DOg} dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0015-replace-st-d02a91" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-yqU5@FwoEPPFjBs~3.a4(LuDU dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0015-replace-sta-d02a91" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-]B*(W?)t*z5O17G044[gUo#$l dst -m comment --comment "DefaultAllow ingress isolation for namespace: kube-node-lease" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-?^xZl_@xfm;jTJ.9o+fIJKi.1 dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-11" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-;gM5;zognIpH~EPUuG~24Da(s dst -m comment --comment "DefaultAllow ingress isolation for namespace: cert-manager" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-5=[n6Q9$Gp4oq*A|wEy+O{=.B dst -m comment --comment "DefaultAllow ingress isolation for namespace: croc-hunter" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-3_W:#6^qCtwmK0;/6.q43VfkJ dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-22" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-o7f[e7bl.Mn#%$kFL~j$y4zEs dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-1" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-[K]JD)v]}@G6s}fS.o0YLHw.J dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-14" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-bu~x^$s1F%LZVwxgTWb@S!^pZ dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-15" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-|xc$KNX!X?m0.+BCuRE;FlI~g dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-2" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-l()]Shhb$5}Emi:%dQ/Y9*yY= dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-20" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-8CmwK]o?h^nH=SmJc;3gmd(}r dst -m comment --comment "DefaultAllow ingress isolation for namespace: jenkin2" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-p/0jCK8MJ@ZSwZI5?IFY~8bqi dst -m comment --comment "DefaultAllow ingress isolation for namespace: master" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-eH!eji[DupTW;dC)ySvQ*;1(6 dst -m comment --comment "DefaultAllow ingress isolation for namespace: null" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-cFKKkUe/ZM~$#N#NMEMH}2B_W dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-10" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-!fGrYW]@3!Vwjy:iThlilR7OQ dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-13" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-hpV|c%VcOlm$c6dCL.m+Q_|ac dst -m comment --comment "DefaultAllow ingress isolation for namespace: selenium" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-E[e#cXKdTd.!eCVZPphwkq+=W dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0011-extend-selenium-t" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-Rzff}h:=]JaaJl/G;(XJpGjZ[ dst -m comment --comment "DefaultAllow ingress isolation for namespace: kube-public" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-$J[k3fvm9M71D0iIOSTt7c8sN dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-7" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-VRoXqT4GoxhLO5x#Y$k}u8iHU dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-8" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-P.B|!ZhkAr5q=XZ?3}tMBA+0 dst -m comment --comment "DefaultAllow ingress isolation for namespace: kube-system" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-SodwN2Ln(pv=HrZcecugr!p/h dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-3" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-m=1/SzmuMDi1fU(?PBY4prYt} dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-5" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-}SIjgm}j]912D5grN^_5[*ufB dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0014-replace-jen-8195b1" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-yu30RJ.[pALc=_)1QMhfppz}Z dst -m comment --comment "DefaultAllow ingress isolation for namespace: jenkins" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-0K^^Pisjka.bm(8}iSAKBLyZJ dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-21" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-GE}?tB@]w@K9=1hG;$N15EkZE dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-6" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-B[7=jezP?}T:M64Ty0i1L?re4 dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0011-extend-sele-d7ae07" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-tFDCPGC@A!qM7+0(Q;tL/_egd dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-19" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-R@9tqE6W16^g6A/#wrmk}zyTv dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0017-cleaning-a-0950e2" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-V$pAKp9^#=*3JlrVmC].^74h9 dst -m comment --comment "DefaultAllow ingress isolation for namespace: jenkins2" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-]8evrIcNv$4oejvQbC}RX?.Q( dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0012-deploy-and--5da24c" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-+FaQ:cir:?r%[(p]_#j=#[3@1 dst -m comment --comment "DefaultAllow ingress isolation for namespace: feature-0016-pipeline-f-b92ec6" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-n=~H[KOR;ap9xe7TuI6/qV]PJ dst -m comment --comment "DefaultAllow ingress isolation for namespace: nginx-ingress" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-c0|FmqmL7@;Cj/OnxUeOwa.o+ dst -m comment --comment "DefaultAllow ingress isolation for namespace: pr-18" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-;rGqyMIl1HN^cfDki~Z$3]6!N dst -m comment --comment "DefaultAllow ingress isolation for namespace: default" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-pfSA^JgVWR7DSZeQTZwAb^J%6 dst -m comment --comment "DefaultAllow ingress isolation for namespace: develop" -j ACCEPT
-A WEAVE-NPC-EGRESS -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC-EGRESS -m physdev --physdev-in vethwe-bridge --physdev-is-bridged -j RETURN
-A WEAVE-NPC-EGRESS -m addrtype --dst-type LOCAL -j RETURN
-A WEAVE-NPC-EGRESS -d 224.0.0.0/4 -j RETURN
-A WEAVE-NPC-EGRESS -m state --state NEW -j WEAVE-NPC-EGRESS-DEFAULT
-A WEAVE-NPC-EGRESS -m state --state NEW -m mark ! --mark 0x40000/0x40000 -j WEAVE-NPC-EGRESS-CUSTOM
-A WEAVE-NPC-EGRESS -m state --state NEW -m mark ! --mark 0x40000/0x40000 -j NFLOG --nflog-group 86
-A WEAVE-NPC-EGRESS -m mark ! --mark 0x40000/0x40000 -j DROP
-A WEAVE-NPC-EGRESS-ACCEPT -j MARK --set-xmark 0x40000/0x40000
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-L@i~RVi#2J?QmqCA2:8!KkVq] src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0011-extend-selenium-t-d7ae07" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-L@i~RVi#2J?QmqCA2:8!KkVq] src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0011-extend-selenium-t-d7ae07" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-~G/)F*d_=jxSh*|].xuZ=?.#} src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0014-replace-sta-b27ba7" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-~G/)F*d_=jxSh*|].xuZ=?.#} src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0014-replace-sta-b27ba7" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-xSH8@9ODFBE(An|#jp0fm.zQF src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0015-replace-st-d02a91" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-xSH8@9ODFBE(An|#jp0fm.zQF src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0015-replace-st-d02a91" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-HwEw|3QaoJ*dRQwz10l58RVkO src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0015-replace-sta-d02a91" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-HwEw|3QaoJ*dRQwz10l58RVkO src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0015-replace-sta-d02a91" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-sui%__gZ}{kX~oZgI_Ttqp=Dp src -m comment --comment "DefaultAllow egress isolation for namespace: kube-node-lease" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-sui%__gZ}{kX~oZgI_Ttqp=Dp src -m comment --comment "DefaultAllow egress isolation for namespace: kube-node-lease" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-~)pNvgSHI9SB91w#^[R^H;$P[ src -m comment --comment "DefaultAllow egress isolation for namespace: pr-11" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-~)pNvgSHI9SB91w#^[R^H;$P[ src -m comment --comment "DefaultAllow egress isolation for namespace: pr-11" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-LXL;Ga7c6=XeJy;Gf8!8GdyHc src -m comment --comment "DefaultAllow egress isolation for namespace: cert-manager" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-LXL;Ga7c6=XeJy;Gf8!8GdyHc src -m comment --comment "DefaultAllow egress isolation for namespace: cert-manager" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-eKEc/+TOp:^Q[;31$P/Lb86@H src -m comment --comment "DefaultAllow egress isolation for namespace: croc-hunter" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-eKEc/+TOp:^Q[;31$P/Lb86@H src -m comment --comment "DefaultAllow egress isolation for namespace: croc-hunter" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-p/srhQ^q95Uk$5ZmhGZ8kRqG src -m comment --comment "DefaultAllow egress isolation for namespace: pr-22" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-p/srhQ^q95Uk$5ZmhGZ8kRqG src -m comment --comment "DefaultAllow egress isolation for namespace: pr-22" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-xej}NhDkC5v{c#z9ym0f[s/(7 src -m comment --comment "DefaultAllow egress isolation for namespace: pr-1" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-xej}NhDkC5v{c#z9ym0f[s/(7 src -m comment --comment "DefaultAllow egress isolation for namespace: pr-1" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-4dcTE7VGdot_HM}HcYCX^yDIS src -m comment --comment "DefaultAllow egress isolation for namespace: pr-14" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-4dcTE7VGdot_HM}HcYCX^yDIS src -m comment --comment "DefaultAllow egress isolation for namespace: pr-14" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-Ru!9+pBdY[P$wg0qBWuVCL0:9 src -m comment --comment "DefaultAllow egress isolation for namespace: pr-15" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-Ru!9+pBdY[P$wg0qBWuVCL0:9 src -m comment --comment "DefaultAllow egress isolation for namespace: pr-15" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-NF!zx!m^8**Gn#lNy09p+yqjr src -m comment --comment "DefaultAllow egress isolation for namespace: pr-2" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-NF!zx!m^8**Gn#lNy09p+yqjr src -m comment --comment "DefaultAllow egress isolation for namespace: pr-2" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-(3pUsPZ}DT$xz7TNCc@/f%Hs( src -m comment --comment "DefaultAllow egress isolation for namespace: pr-20" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-(3pUsPZ}DT$xz7TNCc@/f%Hs( src -m comment --comment "DefaultAllow egress isolation for namespace: pr-20" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-=W_gh}]i}]4?oF2BLS~i]$?g} src -m comment --comment "DefaultAllow egress isolation for namespace: jenkin2" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-=W_gh}]i}]4?oF2BLS~i]$?g} src -m comment --comment "DefaultAllow egress isolation for namespace: jenkin2" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-:xy3=q_0b.km[y[#iWmEB0r)K src -m comment --comment "DefaultAllow egress isolation for namespace: master" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-:xy3=q_0b.km[y[#iWmEB0r)K src -m comment --comment "DefaultAllow egress isolation for namespace: master" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-g86sb.hfKS=!n+T%5gs(c^@VW src -m comment --comment "DefaultAllow egress isolation for namespace: null" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-g86sb.hfKS=!n+T%5gs(c^@VW src -m comment --comment "DefaultAllow egress isolation for namespace: null" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-6ZeL$[R*F+FnRUl:G2ALzny[p src -m comment --comment "DefaultAllow egress isolation for namespace: pr-10" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-6ZeL$[R*F+FnRUl:G2ALzny[p src -m comment --comment "DefaultAllow egress isolation for namespace: pr-10" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-K.sS+ec;C!u*0GxU]NIr)1pe4 src -m comment --comment "DefaultAllow egress isolation for namespace: pr-13" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-K.sS+ec;C!u*0GxU]NIr)1pe4 src -m comment --comment "DefaultAllow egress isolation for namespace: pr-13" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-7otCSZmHpNW)/gs:@[$XKNeE] src -m comment --comment "DefaultAllow egress isolation for namespace: selenium" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-7otCSZmHpNW)/gs:@[$XKNeE] src -m comment --comment "DefaultAllow egress isolation for namespace: selenium" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-V^=tN2{$xKbM5@zZAbPqoxrkL src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0011-extend-selenium-t" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-V^=tN2{$xKbM5@zZAbPqoxrkL src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0011-extend-selenium-t" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-41s)5vQ^o/xWGz6a20N:~?#|E src -m comment --comment "DefaultAllow egress isolation for namespace: kube-public" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-41s)5vQ^o/xWGz6a20N:~?#|E src -m comment --comment "DefaultAllow egress isolation for namespace: kube-public" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-_(t#jmVSer?.;Km[o8Lq#0(dY src -m comment --comment "DefaultAllow egress isolation for namespace: pr-7" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-_(t#jmVSer?.;Km[o8Lq#0(dY src -m comment --comment "DefaultAllow egress isolation for namespace: pr-7" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-tHpht9vtwk[{dm#PQUkz*H^6n src -m comment --comment "DefaultAllow egress isolation for namespace: pr-8" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-tHpht9vtwk[{dm#PQUkz*H^6n src -m comment --comment "DefaultAllow egress isolation for namespace: pr-8" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-E1ney4o[ojNrLk.6rOHi;7MPE src -m comment --comment "DefaultAllow egress isolation for namespace: kube-system" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-E1ney4o[ojNrLk.6rOHi;7MPE src -m comment --comment "DefaultAllow egress isolation for namespace: kube-system" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-LtJ+R+[2Ja0)(O~nmSrJ?wH*+ src -m comment --comment "DefaultAllow egress isolation for namespace: pr-3" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-LtJ+R+[2Ja0)(O~nmSrJ?wH*+ src -m comment --comment "DefaultAllow egress isolation for namespace: pr-3" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-lqDJ_|s+WqaWzOb6jw1(C|q|z src -m comment --comment "DefaultAllow egress isolation for namespace: pr-5" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-lqDJ_|s+WqaWzOb6jw1(C|q|z src -m comment --comment "DefaultAllow egress isolation for namespace: pr-5" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-o9w)E3?Db1;L)UN%hx;g|gEu) src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0014-replace-jen-8195b1" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-o9w)E3?Db1;L)UN%hx;g|gEu) src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0014-replace-jen-8195b1" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-V*Ge^kkJ{Pr9=xo{:b4%oiMh$ src -m comment --comment "DefaultAllow egress isolation for namespace: jenkins" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-V*Ge^kkJ{Pr9=xo{:b4%oiMh$ src -m comment --comment "DefaultAllow egress isolation for namespace: jenkins" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-*Z)|8)7nb!e!yAV0Q9TZs:_OO src -m comment --comment "DefaultAllow egress isolation for namespace: pr-21" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-*Z)|8)7nb!e!yAV0Q9TZs:_OO src -m comment --comment "DefaultAllow egress isolation for namespace: pr-21" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-WCRmsE*Oo?@o(xTAFPy08%?IZ src -m comment --comment "DefaultAllow egress isolation for namespace: pr-6" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-WCRmsE*Oo?@o(xTAFPy08%?IZ src -m comment --comment "DefaultAllow egress isolation for namespace: pr-6" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-yy@9WZ1P2vjZy#pDNZywBXlno src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0011-extend-sele-d7ae07" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-yy@9WZ1P2vjZy#pDNZywBXlno src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0011-extend-sele-d7ae07" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-@omBz$_)5dE_uksPd?QtaG;~P src -m comment --comment "DefaultAllow egress isolation for namespace: pr-19" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-@omBz$_)5dE_uksPd?QtaG;~P src -m comment --comment "DefaultAllow egress isolation for namespace: pr-19" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-Raz$~~x{:_|_Q:Eq}g*vJH}7M src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0017-cleaning-a-0950e2" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-Raz$~~x{:_|_Q:Eq}g*vJH}7M src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0017-cleaning-a-0950e2" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-%@UG0)==lpLwD2iZ0TuVY2kbF src -m comment --comment "DefaultAllow egress isolation for namespace: jenkins2" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-%@UG0)==lpLwD2iZ0TuVY2kbF src -m comment --comment "DefaultAllow egress isolation for namespace: jenkins2" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-~Blct[@iPBscaql6J)zc8:j{j src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0012-deploy-and--5da24c" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-~Blct[@iPBscaql6J)zc8:j{j src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0012-deploy-and--5da24c" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-YQ|$d*HTeNc3+NADo8l^=Nre5 src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0016-pipeline-f-b92ec6" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-YQ|$d*HTeNc3+NADo8l^=Nre5 src -m comment --comment "DefaultAllow egress isolation for namespace: feature-0016-pipeline-f-b92ec6" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-urLRFC1SdWSlNqBIr5CPK@mDD src -m comment --comment "DefaultAllow egress isolation for namespace: nginx-ingress" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-urLRFC1SdWSlNqBIr5CPK@mDD src -m comment --comment "DefaultAllow egress isolation for namespace: nginx-ingress" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-#h3RJL83)[1_pJP7t)0O37nBf src -m comment --comment "DefaultAllow egress isolation for namespace: pr-18" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-#h3RJL83)[1_pJP7t)0O37nBf src -m comment --comment "DefaultAllow egress isolation for namespace: pr-18" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-s_+ChJId4Uy_$}G;WdH|~TK)I src -m comment --comment "DefaultAllow egress isolation for namespace: default" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-s_+ChJId4Uy_$}G;WdH|~TK)I src -m comment --comment "DefaultAllow egress isolation for namespace: default" -j RETURN
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-[XM^YbZ!Y0BqVWXp*PZM3AStI src -m comment --comment "DefaultAllow egress isolation for namespace: develop" -j WEAVE-NPC-EGRESS-ACCEPT
-A WEAVE-NPC-EGRESS-DEFAULT -m set --match-set weave-[XM^YbZ!Y0BqVWXp*PZM3AStI src -m comment --comment "DefaultAllow egress isolation for namespace: develop" -j RETURN
COMMIT
# Completed on Fri Jun 12 18:19:27 2020
